Fixed logo on mobile

--- a/plan/static/style.css
+++ b/plan/static/style.css
@@ -1,3 +1,7 @@
 .red {
     color: red !important;
 }
+
+#logo {
+    font-size: 60px;
+}
